--- a/books-app-crud-with-populate/views/layout.hbs
+++ b/books-app-crud-with-populate/views/layout.hbs
@@ -14,7 +14,7 @@
         <a href="/books/new"> Create book</a>
         <a href="/authors/new"> Create author</a>
         <a href="/authors"> Authors</a>
-        {{!-- <a href="/books"> Books</a> --}}
+        <a href="/books"> Books</a>
       </nav>
 
       {{{body}}}
