add validation and session management

--- a/basic-auth-demo/views/auth-pages/login.hbs
+++ b/basic-auth-demo/views/auth-pages/login.hbs
@@ -1,12 +1,6 @@
-<h2> Create an account </h2>
+<h2> Login </h2>
 
-<form action="/create-account" method="POST">
-
-    <label> Username: 
-        <input type="text" name="username" required />
-    </label>
-
-    <br>
+<form action="/process-login" method="POST">
 
     <label> Email: 
         <input type="email" name="email" required />
@@ -20,7 +14,7 @@
 
     <br>
     
-    <button type="submit"> Sign Up </button>
+    <button type="submit"> Login </button>
 
 </form>
 
