--- a/basic-auth-demo/views/layout.hbs
+++ b/basic-auth-demo/views/layout.hbs
@@ -12,7 +12,8 @@
    <body>
 
       <nav>
-         <a href="/signup"> Create an account </a>
+         <a href="/signup"> Create an account </a> <br>
+         <a href="/login"> Login </a> <br>
       </nav>
 
       {{{body}}}
