--- a/basic-auth-demo/views/user-pages/profile-page.hbs
+++ b/basic-auth-demo/views/user-pages/profile-page.hbs
@@ -1,1 +1,20 @@
-<h3>This is profile page</h3>
+{{!-- {{#if userFromDB }}
+    <h3> Welcome to the app, {{ userFromDB.username }}</h3>
+
+    {{else}}    
+
+    <h3> No logged in user! </h3>
+{{/if}} --}}
+
+{{!-- this is after we started using session --}}
+
+{{#if userInSession}}
+    <h3>Welcome, {{ userInSession.username }}</h3>
+
+    <button> <a href="/profile"> Reload! </a></button>
+
+{{else}}
+
+    <p>There is no one in the session!</p>
+
+{{/if}}
