add route guards and global user middleware

--- a/basic-auth-demo/views/layout.hbs
+++ b/basic-auth-demo/views/layout.hbs
@@ -11,9 +11,19 @@
 
    <body>
 
+      {{!-- <h1>this comes from layout: {{appTitle}}</h1> --}}
+
       <nav>
-         <a href="/signup"> Create an account </a> <br>
-         <a href="/login"> Login </a> <br>
+         {{#if userInSession}}
+            <a href="/profile"> Profile </a> <br>
+            <form action="/logout" method="POST">
+               <button> Logout </button>
+            </form>
+         {{else}}
+            <a href="/signup"> Create an account </a> <br>
+            <a href="/login"> Login </a> <br>
+         {{/if}}
+
       </nav>
 
       {{{body}}}
