add image upload and updating profile image

--- a/basic-auth-demo/views/user-pages/profile-page.hbs
+++ b/basic-auth-demo/views/user-pages/profile-page.hbs
@@ -10,6 +10,17 @@
 
 {{#if userInSession}}
     <h3>Welcome, {{ userInSession.username }}</h3>
+    
+    <br>
+
+    <img src="{{userInSession.profileImg}}" alt="profile image" width="300">
+
+    <br>
+
+    <form action="/profile/change-image" method="POST" enctype="multipart/form-data">
+        <input type="file" name="image">
+        <button> Change image </button>
+    </form>
 
     <button> <a href="/profile"> Reload! </a></button>
 
