--- a/basic-auth-demo/views/auth-pages/signup.hbs
+++ b/basic-auth-demo/views/auth-pages/signup.hbs
@@ -1,6 +1,6 @@
 <h2> Create an account </h2>
 
-<form action="/create-account" method="POST">
+<form action="/create-account" method="POST" enctype="multipart/form-data">
 
     <label> Username: 
         <input type="text" name="username" required />
@@ -16,6 +16,12 @@
 
     <label> Password: 
         <input type="password" name="password" required />
+    </label>
+
+    <br>
+
+    <label> Add profile image: 
+        <input type="file" name="image" />
     </label>
 
     <br>
